--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -8,6 +8,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - run: exit 1
       - uses: actions/checkout@v2
       
       - uses: ruby/setup-ruby@v1
