--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -73,6 +73,16 @@ jobs:
           mkdir -p -m 700 ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/rails-deploy-webapp
           chmod 600 ~/.ssh/rails-deploy-webapp
+
+      - name: Set SSH Config
+        run: |
+          cat << EOF > ~/.ssh/config
+          Host rails-deploy-bastion
+            StrictHostKeyCheking no
+            HostName ${{ secrets.BASTION_HOSTNAME }}
+          Host rails-deploy-webapp
+            ProxyJump webapp@rails-deploy-bastion
+          EOF
         
       - name: Capistrano Deploy
         run: |
@@ -80,4 +90,4 @@ jobs:
           ssh-add ~/.ssh/rails-deploy-webapp
           bundle exec cap production deploy
         env:
-          CAP_SERVER: ${{ secrets.TARGET_HOSTNAME }}
+          CAP_SERVER: rails-deploy-webapp
